--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Pokedex</string>
-
     <string name="prod_name">Pokedex</string>
     <string name="debug_name">[D]Pokedex</string>
+    <string name="go_back">Go back</string>
 </resources>
